# combinatorial_codes

./: .gitignore  CHANGELOG.md  C_EXTENSION_README.md  INSTALLATION_AND_COMPILATION.md  LICENSE  MANIFEST.in  README.md  TESTING.md  __init__.py  comprehensive_test.py  debug_c_ext.py  getting_started.py  install_and_test.py  pyproject.toml  pytest.ini  run_tests.py  setup.py  setup_with_tests.py.example  simple_test.py  test_c_ext.py  test_c_extension.py  verify_installation.py
src/combinatorial_codes/: __init__.py  benchmarks.py  codes.py  correct_examples.py  examples.py  install_verification.py  setup.py  status.py  utils.py
src/combinatorial_codes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/combinatorial_codes/archive/: translated_functions.c
tests/: __init__.py  test_combinatorial_codes.py
