[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "numpy>=1.19.0",
    "Cython>=0.29.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "combinatorial_codes"
dynamic = ["version"]
description = "A Python package for combinatorial neural codes"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "numba>=0.50.0",
    "scipy>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools.dynamic]
version = {attr = "combinatorial_codes.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
combinatorial_codes = ["*.c", "*.h"]
